# cfg-parsing

./: .gitmodules  Build.sh  Cargo.toml  example.cfg
src/: lib.rs  main.rs
tool/: Cargo.toml
tool/src/: cli_args.rs  lib.rs  main.rs
